k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ner-annotator
  labels:
    app: ner-annotator
spec:
  type: ClusterIP
  selector:
    app: ner-annotator
  ports:
    - name: http
      port: 80
      targetPort: 8000
